[gd_scene load_steps=4 format=3 uid="uid://qvg4q16blgx5"]

[ext_resource type="PackedScene" uid="uid://cyvrywci15kev" path="res://chat.tscn" id="1_i673i"]
[ext_resource type="Script" uid="uid://blxndhdtjw7mt" path="res://server.gd" id="1_urpfw"]
[ext_resource type="Script" uid="uid://b1bu2661jrfv8" path="res://websocket/WebSocketServer.gd" id="3_0eqsy"]

[node name="Server" instance=ExtResource("1_i673i")]
script = ExtResource("1_urpfw")

[node name="WebSocketServer" type="Node" parent="." index="0"]
script = ExtResource("3_0eqsy")
supported_protocols = PackedStringArray("demo-chat")

[node name="Panel" parent="." index="1"]
layout_mode = 1
anchors_preset = 15

[node name="VBoxContainer" parent="Panel" index="0"]
layout_mode = 1
anchors_preset = 15

[node name="Host" parent="Panel/VBoxContainer/Connect" index="0"]
visible = false

[node name="Connect" parent="Panel/VBoxContainer/Connect" index="1"]
visible = false

[connection signal="client_connected" from="WebSocketServer" to="." method="_on_web_socket_server_client_connected"]
[connection signal="client_disconnected" from="WebSocketServer" to="." method="_on_web_socket_server_client_disconnected"]
[connection signal="message_received" from="WebSocketServer" to="." method="_on_web_socket_server_message_received"]
[connection signal="toggled" from="Panel/VBoxContainer/Connect/Listen" to="." method="_on_listen_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/Send/Send" to="." method="_on_send_pressed"]
